Don't show the 'show all' link where there is nothing more to show

--- a/app/views/shared/_received_requests_sidebar_box.html.erb
+++ b/app/views/shared/_received_requests_sidebar_box.html.erb
@@ -13,6 +13,8 @@
             <% end %>
         <% end %>
     </ul>
-    <hr>
-    <a href="#">Vis alle</a>
+    <% if not bookings.empty? %>
+        <hr>
+        <a href="#">Vis alle</a>
+    <% end %>
 <% end %>
