--- a/app/views/ads/_slim_map_location.html.erb
+++ b/app/views/ads/_slim_map_location.html.erb
@@ -1,5 +1,10 @@
-<section class="slim-map-location">
-    <div class="slim-map-location__map" data-geolocation="<%= ad.location.lat %>,<%= ad.location.lon %>" data-controller="sideBarMap">
+<% if defined? ad.location.lat and defined? ad.location.lon %>
+    <section class="slim-map-location">
+        <div class="slim-map-location__map"
+             data-geolocation="<%= ad.location.lat %>,<%= ad.location.lon %>"
+             data-controller="sideBarMap">
+        <div>
+    </section>
+<% end %>
 
-    <div>
-</section>
+<%# fixme: do we need an else? %>
