Show correct images in my ads list

--- a/app/assets/stylesheets/_owned_ad_item.scss
+++ b/app/assets/stylesheets/_owned_ad_item.scss
@@ -3,7 +3,11 @@
 .owned-ad-item {
     padding: $standard-spacing;
 
-    &:nth-of-type(n+2) {
+    &__thumb {
+        max-height: 80px;
+    }
+
+    &:nth-of-type(odd) {
         background-color: $color-subtle-gray-background;
     }
 }
