--- a/app/views/ads/_owned_ad_item.html.erb
+++ b/app/views/ads/_owned_ad_item.html.erb
@@ -1,7 +1,8 @@
 <div class="owned-ad-item">
     <h5><%= link_to ad.title, edit_ad_path(ad) %></h5>
     <p>
-        <%= image_tag "ads/ad1/ad_image_1.jpg", alt: "", size: "160x100", class: "u-pull-right" %>
+        <%# fixme: set size here %>  
+        <%= image_tag ad.image_url_with_fallback(:thumb), alt: "", class: "u-pull-right owned-ad-item__thumb" %>
         <%= ad.summary %>
     </p>
     <p><%= ad.updated_at.to_formatted_s(:plendit_short_datetime) %> STATUS</p>
