Added most stuff needed for 'popular stuff' on frontpage

--- a/app/assets/stylesheets/_constants.scss
+++ b/app/assets/stylesheets/_constants.scss
@@ -6,6 +6,7 @@ $large-spacing: $standard-spacing * 3;
 $color-background: #edefed;
 $color-plendit-blue: #2a96ff;
 $color-box-border: #9b9b9b;
+$color-gray-text: #454649;
 
 $color-gray-background: #d4d4d4; // rgb(212,212,212);
 $color-subtle-gray-background: #dee1df;
@@ -13,7 +14,6 @@ $color-subtle-gray-background: #dee1df;
 $color-button-good: #36b984;
 $color-button-bad: #c20400;
 $color-button-neutral: #8f8989;
-
 
 @mixin buttonish() {
     display: inline-block;
