Use form and button for link to start a new ad

--- a/app/views/misc/frontpage.html.erb
+++ b/app/views/misc/frontpage.html.erb
@@ -1,4 +1,3 @@
-
 <section class="front-search-block">        
     <h1 class="front-search-block__title">LEI DET DU TRENGER</h1>
 
@@ -11,10 +10,11 @@
         <% end %>
     </div>
     <div>
-        <%= link_to 'Lei ut tingene dine her', new_ad_path, {:class => 'front-search-block__new-ad-button button-primary'} %>
+        <form action="<%= new_ad_path %>">
+            <button class="button-primary" type="submit">Lei ut tingene dine her</button>
+        </form>
     </div>
 </section>
-
 
 <section class="front-popular-block">
     <%= render partial: "front_popular_box", collection: @popular_topics, as: 'topic' %>
