Fixed semi-opaque box on frontpage

--- a/app/views/misc/frontpage.html.erb
+++ b/app/views/misc/frontpage.html.erb
@@ -9,7 +9,7 @@
           <%= submit_tag 'Søk', class: 'front-search-block__search-button button-primary' %>
         <% end %>
     </div>
-    <div>
+    <div class="front-search-block__create-box" >
         <form action="<%= new_ad_path %>">
             <button class="button-primary" type="submit">Lei ut tingene dine her</button>
         </form>
