--- a/app/assets/stylesheets/frontpage.scss
+++ b/app/assets/stylesheets/frontpage.scss
@@ -2,7 +2,7 @@
 
 
 .front-search-block {
-    padding-top: 170px;
+    padding-top: 80px;
     height: 500px;
     background-image: image-url('garage.jpg');
     background-repeat: no-repeat;
@@ -19,6 +19,16 @@
     
     &__input {
         color: black;
+    }
+
+    &__create-box {
+        position: absolute;
+        bottom: 0;
+        height: 110px;
+        width: 100%;
+        vertical-align: middle;
+        line-height: 110px;
+        background-color: rgba(0,0,0,0.7);
     }
 
 }
