--- a/app/assets/stylesheets/_ad_gallery_box.scss
+++ b/app/assets/stylesheets/_ad_gallery_box.scss
@@ -13,6 +13,8 @@
     &__thumbnail {
         margin: 0 ($standard-spacing / 3) 0 ($standard-spacing / 3);
         border-radius: 50%;
+        width: 80px;
+        height: 80px;
     }
 
 }
