--- a/app/views/ads/_form.html.erb
+++ b/app/views/ads/_form.html.erb
@@ -26,14 +26,45 @@
             <label>Overskrift:</label>
             <%= f.text_field :title, class: 'u-full-width' %>
 
-            <div class="row">
-                <div class="six columns">
-                    <label>Pris pr time: || Pris per dag: || Pris per uke: </label>
-                    <%= f.text_field :price, class: 'u-full-width', data: {:controller => "syncPayout"} %>
+            <div data-controller="syncPayout">
+                <div class="row">
+                    <div class="four columns">
+                        <label>
+                            <input type="checkbox">
+                            <span class="label-body">Pris pr time</span>
+                        </label>
+                        <input type="text" name="hour_price" class="u-full-width" placeholder="Kr 0" data-payout-source>
+                    </div>
+                    <div class="four columns">
+                        <label>
+                            <input type="checkbox">
+                            <span class="label-body">Pris pr dag</span>
+                        </label>
+                        <input type="text" name="day_price" class="u-full-width" placeholder="Kr 0" data-payout-source>
+                    </div>
+                    <div class="four columns">
+                        <label>
+                            <input type="checkbox">
+                            <span class="label-body">Pris pr uke</span>
+                        </label>
+                        <input type="text" name="week_price" class="u-full-width" placeholder="Kr 0" data-payout-source>
+                    </div>
                 </div>
-                <div class="six columns">
-                    <label>Utbetales til deg:</label>
-                    <input type="text" class="u-full-width" data-payout>
+
+                <div>
+                    <span>Utbetales til deg:</span>
+                </div>
+
+                <div class="row">
+                    <div class="four columns">
+                        <input type="text" class="u-full-width" placeholder="Kr 0" data-payout-for="hour_price">
+                    </div>
+                    <div class="four columns">
+                        <input type="text" class="u-full-width" placeholder="Kr 0" data-payout-for="day_price">
+                    </div>
+                    <div class="four columns">
+                        <input type="text" class="u-full-width" placeholder="Kr 0" data-payout-for="week_price">
+                    </div>
                 </div>
             </div>
 
@@ -46,7 +77,7 @@
 
             <label>
               <div>
-                <span><small> Adresse for henting: </small></span>
+                <span><small>Adresse for henting:</small></span>
               </div>
               <%- if @ad.user.locations.length > 0 -%>
               <div>
