--- a/app/views/favorite_lists/index.html.erb
+++ b/app/views/favorite_lists/index.html.erb
@@ -5,6 +5,7 @@
 <table>
   <thead>
     <tr>
+      <th>ID</th>
       <th>User</th>
       <th>Name</th>
       <th colspan="3"></th>
@@ -14,7 +15,8 @@
   <tbody>
     <% @favorite_lists.each do |favorite_list| %>
       <tr>
-        <td><%= favorite_list.user %></td>
+        <td><%= favorite_list.id %></td>
+        <td><%= favorite_list.user.id %> - <%= favorite_list.user.name %></td>
         <td><%= favorite_list.name %></td>
         <td><%= link_to 'Show', favorite_list %></td>
         <td><%= link_to 'Edit', edit_favorite_list_path(favorite_list) %></td>
