Nicer styling of the favorite button thingy

--- a/app/assets/stylesheets/_booking_request_form.scss
+++ b/app/assets/stylesheets/_booking_request_form.scss
@@ -16,4 +16,13 @@
         width: 100%
     }
 
+    &__heart {
+        vertical-align: middle;
+    }
+
+    &__heart--favorite {
+        vertical-align: middle;
+        background-color: gold;
+    }
+
 }
