Make one of the price boxes work, for testing

--- a/app/views/ads/_form.html.erb
+++ b/app/views/ads/_form.html.erb
@@ -33,7 +33,7 @@
                             <input type="checkbox">
                             <span class="label-body">Pris pr time</span>
                         </label>
-                        <input type="text" name="hour_price" class="u-full-width" placeholder="Kr 0" data-payout-source>
+                        <%= f.number_field :price, class: "u-full-width", placeholder: "Kr 0" %>
                     </div>
                     <div class="four columns">
                         <label>
