--- a/app/views/ads/_form.html.erb
+++ b/app/views/ads/_form.html.erb
@@ -28,44 +28,23 @@
 
             <div data-controller="syncPayout">
                 <div class="row">
-                    <div class="four columns">
+                    <div class="five columns">
                         <label>
-                            <input type="checkbox">
-                            <span class="label-body">Pris pr time</span>
-                        </label>
-                        <%= f.number_field :price, class: "u-full-width", placeholder: "Kr 0" %>
-                    </div>
-                    <div class="four columns">
-                        <label>
-                            <input type="checkbox">
                             <span class="label-body">Pris pr dag</span>
                         </label>
-                        <input type="text" name="day_price" class="u-full-width" placeholder="Kr 0" data-payout-source>
+                        <%= f.number_field :price,
+                                class: "u-full-width",
+                                placeholder: "Kr 0",
+                                data: {"payout-source" => ""} %>
                     </div>
-                    <div class="four columns">
+                    <div class="five columns">
                         <label>
-                            <input type="checkbox">
-                            <span class="label-body">Pris pr uke</span>
+                            <span class="label-body">Utbetales til deg</span>
                         </label>
-                        <input type="text" name="week_price" class="u-full-width" placeholder="Kr 0" data-payout-source>
+                        <input disabled="true" type="text" name="day_price" class="u-full-width" placeholder="Kr 0" data-payout-for="ad[price]">
                     </div>
                 </div>
 
-                <div>
-                    <span>Utbetales til deg:</span>
-                </div>
-
-                <div class="row">
-                    <div class="four columns">
-                        <input type="text" class="u-full-width" placeholder="Kr 0" data-payout-for="hour_price">
-                    </div>
-                    <div class="four columns">
-                        <input type="text" class="u-full-width" placeholder="Kr 0" data-payout-for="day_price">
-                    </div>
-                    <div class="four columns">
-                        <input type="text" class="u-full-width" placeholder="Kr 0" data-payout-for="week_price">
-                    </div>
-                </div>
             </div>
 
             <label>
