--- a/app/views/bookings/_incoming_request_item.html.erb
+++ b/app/views/bookings/_incoming_request_item.html.erb
@@ -10,7 +10,7 @@
             <p>
                 <%= booking.ad.summary %>
             </p>
-            <p><%= booking.updated_at.to_formatted_s(:plendit_short_datetime) %> STATUS</p>
+            <p><%= booking.updated_at.to_formatted_s(:plendit_short_datetime) %> STATUS: <b><%= booking.booking_status.status %></b></p>
         </div>
     </div>
 </div>
