Make notification count a var

--- a/app/views/application/_top_bar.html.erb
+++ b/app/views/application/_top_bar.html.erb
@@ -24,7 +24,7 @@
 
             <span class="top-bar__top-section">Varsler
                 <% if current_user.new_notifications.size != 0 %>
-                    <span class="top-bar__notification-count">current_user.new_notifications.size</span>
+                    <span class="top-bar__notification-count"><%= current_user.new_notifications.size %></span>
                 <% end %>
             </span>
 
