--- a/app/views/application/_top_bar.html.erb
+++ b/app/views/application/_top_bar.html.erb
@@ -56,18 +56,25 @@
         </div>
 
         <ol class="notification-box__list">
-            <li class="notification-box__row row">
-                <div class="two columns u-center">
-                    <%= render('shared/avatar.html', user: current_user, size: "small") %>
-                </div>
-                <div class="ten columns">
-                    <p class="notification-box__para">
-                        Trygve ønsker <strong class="green">å leie</strong>
-                        Skiguard 860 takboks til Volvo XC-V 70.                            
-                    </p>
-                    <p class="notification-box__para"><small>To timer siden</small></p>
-                </div>
-            </li>
+
+            <% current_user.new_notifications.each do |n| %>
+
+                <li class="notification-box__row row">
+                    <div class="two columns u-center">
+                        <%= render('shared/avatar.html', user: n.source_user, size: "small") %>
+                    </div>
+                    <div class="ten columns">
+                        <p class="notification-box__para">
+                            <%= n.message %>
+                        </p>
+                        <p class="notification-box__para">
+                            <small><%= n.updated_at.to_formatted_s(:plendit_short_datetime) %></small>
+                        </p>
+                    </div>
+                </li>
+
+            <% end %>
+
         </ol>
 
     </div>
