--- a/app/assets/stylesheets/_notification_box.scss
+++ b/app/assets/stylesheets/_notification_box.scss
@@ -1,10 +1,10 @@
 @import 'constants.scss';
 
 .notification-box {
-    position: fixed;
+    position: absolute;
     top: 24px;
     left: 500px;
-    z-index: 1;
+    z-index: 10;
     width: 400px;
     background-color: white;
     border: solid thin $color-box-border;
