--- a/app/views/users/registrations/edit.html.erb
+++ b/app/views/users/registrations/edit.html.erb
@@ -31,8 +31,8 @@
 
                     <div class="row">
                         <div class="six columns">
-                            <%= f.label :phone_number, "Telefonnummer" %>
-                            <%= f.text_field :phone_number, class: "u-full-width" %>
+                            <%= f.label :current_phone_number, "Telefonnummer" %>
+                            <%= f.text_field :current_phone_number, { class: "u-full-width", maxlength: 8 } %>
                         </div>
                     </div>
 
